Made Alignmenent of Josh Navbar correct

--- a/src/Components/ProjectCarousel/ProjectCarousel.scss
+++ b/src/Components/ProjectCarousel/ProjectCarousel.scss
@@ -31,6 +31,8 @@ line-height: 34px;
 }
 .project-carousel{
     display: flex;
+    top:0;
+    position: relative;
      padding-top: 1%;
     padding-bottom: 1%;
 justify-content: space-between;
